# freewheeling-plus

./: .gitignore  ACCEPTANCE_STATUS.md  API_PARITY.md  CPP_PARITY_SESSION.md  Cargo.toml  FEATURE_MATRIX.md  MIGRATION_STATUS.md  PACKAGING.md  PORTING_GAPS.md  README.md  REMEDIATION_PLAN.md  android-build.sh  win-build.sh
.cargo/: config.toml
.github/workflows/: ci.yml
acceptance-evidence/: README.md
acceptance-evidence/linux/: README.md  virtual-jack-performance.json
acceptance-evidence/macos/: README.md
data/: basics.xml  interfaces.xml  mercury.xml
docs/: basic-sf2-clean-room-handoff.md  cpp-port-gap-analysis.md  cross-platform-port.md
fixtures/: performance-result.schema.json
scripts/: README.md  capture_cpp_full_startup.sh  capture_rust_screenshots.sh  compare_screenshots.py  package-macos-arm64.sh  run_macos_diagnostics.sh  run_macos_workflow_capture.py  validate_performance_result.py  verify_macos_bundle.py
src/: amixer.rs  application_services.rs  audio_native_cpal.rs  audioio.rs  audioio_platform.rs  block.rs  block_managers.rs  browser.rs  browser_types.rs  config.rs  core.rs  core_dsp.rs  core_dsp_audio_buffers.rs  core_dsp_processors.rs  core_dsp_pulse.rs  core_dsp_root.rs  core_persistence.rs  core_persistence_parse.rs  core_persistence_runtime.rs  core_startup.rs  datatypes.rs  dsp_profile.rs  event.rs  file_codecs.rs  file_streamer.rs  fluidsynth.rs  fweelin_app.rs  jack.rs  jack_ringbuffer.rs  lib.rs  library_helper.rs  linux_native.rs  logo.rs  looplibrary.rs  macos.rs  macos_audio_unit.rs  macos_sdlmain.rs  main.rs  mem.rs  midiio.rs  (+33 more)
tests/: block_managers_test.rs  block_test.rs  browser_types_test.rs  codec_formats.rs  codec_pipeline.rs  core_persistence_parse_test.rs  core_startup_test.rs  cpp_codec_persistence_golden.rs  cpp_codec_runtime_parity.rs  cpp_fixture_acceptance.rs  cpp_golden_parity.rs  cpp_midi_runtime_parity.rs  cpp_screenshot_fixture.rs  datatypes_test.rs  event_test.rs  fweelin_app_test.rs  linux_native_test.rs  linux_virtual_acceptance.rs  logo_test.rs  macos_acceptance.rs  macos_lifecycle_packaging.rs  macos_workflow_guardrails.rs  migration_acceptance.rs  native_dsp_transfer.rs  native_loop_selection.rs  native_patch_browser.rs  native_rename.rs  native_runtime_contract.rs  native_scene_workflow.rs  native_ui_state.rs  owned_callback_rt_safety.rs  packaging_guardrails.rs  performance_guardrails.rs  pixel_parity_runtime.rs  realtime_acceptance.rs  runtime_event_actions.rs  runtime_library_persistence.rs  startup_guard_platform_test.rs  string_utils_test.rs  threading_acceptance.rs
tests/support/: mod.rs
(+52 files in other folders)
