[package]
name = "freewheeling-plus"
version = "0.1.0"
edition = "2024"
default-run = "freewheeling-plus"

[dependencies]
libc = "0.2"
roxmltree = "0.20"
hound = "3.5"
lewton = "0.10"
vorbis_rs = "0.5.5"
flacenc = "0.5.1"
claxon = "0.4.3"
md-5 = "0.10.6"
crossbeam-queue = "0.3.12"
cpal = "0.18.1"
midir = "0.11.0"
sdl2 = { version = "0.38.0", features = ["bundled", "static-link"] }
fluidlite = { version = "0.2.1", features = ["bindgen", "builtin"] }
fontdue = "0.9.3"
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tga"] }
rtrb = "0.3.4"
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
jack = "0.13.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
coreaudio-sys = { version = "0.2", features = ["audio_unit"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11.0"

[package.metadata.bundle]
name = "FreeWheeling"
identifier = "org.freewheeling.freewheeling-plus"
category = "public.app-category.music"
short_description = "Live looping instrument"
copyright = "FreeWheeling contributors"
osx_minimum_system_version = "11.0"
resources = ["data"]

[package.metadata.android]
package = "org.freewheeling.freewheeling_plus"
min_sdk_version = 34
sdk.target_sdk_version = 34
assets = "data/"
